fix: status dropdown & checkbox selection
In this commit:
- dropdown was not showing due to recent changes in previous PRs
- on checkbox selection, table was navigating to 1st page

--- a/src/CourseTeamManagement/index.scss
+++ b/src/CourseTeamManagement/index.scss
@@ -45,6 +45,12 @@
 }
 
 .course-team-management-courses-table {
+    .pgn__data-table-row {
+        td {
+            overflow: visible;
+        }
+    }
+
     .pgn__data-table-actions-left {
         display: none;
     }
